Closed Bug 568162 Opened 14 years ago Closed 14 years ago

Fix a hack leftover in the WebM seeking code from the prototype implementation

Categories

(Core :: Audio/Video, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: kinetik, Assigned: kinetik)

References

Details

Attachments

(1 file, 1 obsolete file)

Depends on: 566245
Attached patch patch v0 (obsolete) — Splinter Review
I think this is what we want.  Decode forward at least 2 frames (rather than just one).  Use the start time of the second frame as the end time for the first frame, since we can't assume they're a fixed distance apart (and thus can't use/don't have a valid mCallbackPeriod).

Asking Chris P for review since he wrote the Ogg version of this code.
Assignee: nobody → kinetik
Status: NEW → ASSIGNED
Attachment #447472 - Flags: review?(chris)
Attached patch patch v0Splinter Review
Without random hunks of other patches included.
Attachment #447472 - Attachment is obsolete: true
Attachment #447472 - Flags: review?(chris)
Attachment #447473 - Flags: review?(chris)
I'm not sure why, but this patch seems to make seeking quite a bit slower.  Needs investigation.
I measured it by timing the start and end of nsWebMReader::Seek and it turns out that it's only slower by about what you'd expect for decoding an additional frame or so.  Over approximately 400 seeks in a local copy of sync.webm, the mean time to seek is 101ms ± 5ms before and 128ms ± 6ms after.
Blocks: 568432
Comment on attachment 447473 [details] [diff] [review]
patch v0

Looks reasonable.
Attachment #447473 - Flags: review?(chris) → review+
This still applies on top of the latest version of bug 566245, so it's ready to land whenever that bug does.
Keywords: checkin-needed
Whiteboard: [needs landing]
http://hg.mozilla.org/mozilla-central/rev/523c8b56ca16
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [needs landing]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: