Bug 568162 - More accurate frame end time after seeking for WebM. r=cpearce